# parallelDistributedECG

./: CMakeLists.txt  README.md
src/: ecg_processor.cpp  ecg_processor.h  main.cpp  mainBackup.cpp
